@@ -1,5 +1,13 @@
 05/23/2005 Bob Rossi <bob@brasko.net>
 
+	* aclocal.m4: Autogenerated.
+	* configure: Autogenerated.
+	* config/readline.m4: Check for history library to pass autoconf tests.
+	Changed message printed when libreadline or libhistory fail to be found.
+	* NEWS: It's now an error not to have GNU readline or history library.
+
+05/23/2005 Bob Rossi <bob@brasko.net>
+
 	* RELEASE_TODO: Preparing some work to be done for .5.3.
 	* NEWS: Announcing changes for the next release.
 	* aclocal.m4: Autogenerated.
